adding import statement quickfix
this quickfix can search unknown symbol in "Cannot find name 'name'"
error for file name in current project. this adds improt symbol =
require("./symbol"). ./symbol is example of full relative path.

--- a/lib/tsconfig.json
+++ b/lib/tsconfig.json
@@ -52,6 +52,7 @@
         "./main/lang/core/languageServiceHost2.ts",
         "./main/lang/core/project.ts",
         "./main/lang/fixmyts/addClassMember.ts",
+        "./main/lang/fixmyts/addImportStatement.ts",
         "./main/lang/fixmyts/astUtils.ts",
         "./main/lang/fixmyts/equalsToEquals.ts",
         "./main/lang/fixmyts/quickFix.ts",
